# tiralabra

./: .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: käyttöohjeet.md  määritteltdokumentti.md  määrittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md  viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md
src/: ai.py  index.py  suorituskykytestaus.py  ui.py
src/entities/: connectfour.py  tiedot.py
src/tests/: ai_test.py  connectfour_test.py
